--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "sc0vu/web3.php": "^0.1.4",
-        "kornrunner/keccak": "^1.1"
+        "kornrunner/keccak": "^1.1",
+        "phpmailer/phpmailer": "^7.0"
     }
 }
